1.0.3
- Reduce second step required cooking time
- Add Jade support

1.0.2
- Return sticks when consuming skewers

1.0.1
- Fix seasoning name display
- Fix Carry On compatibility
- Allow sandwich and wraps to carry over food effects
- Change sandwich recipe a little bit