@@ -13,6 +13,6 @@ jei_version = 15.2.0.23
 curios_version = 5.2.0-beta.3+1.20.1
 
 modid = barbequesdelight
-ll_version = 1.0.2
+ll_version = 1.0.3
 lljij = true
 rootMod = true
