@@ -23,9 +23,11 @@
   "item.barbequesdelight.burnt_skewer": "ɹǝʍǝʞS ʇuɹnᗺ",
   "item.barbequesdelight.chili_powder": "ɹǝpʍoԀ ıןıɥƆ",
   "item.barbequesdelight.cumin_powder": "ɹǝpʍoԀ uıɯnƆ",
+  "item.barbequesdelight.grilled_beef_skewer": "ɹǝʍǝʞS ɟǝǝᗺ pǝןןıɹ⅁",
   "item.barbequesdelight.grilled_chicken_skewer": "ɹǝʍǝʞS uǝʞɔıɥƆ pǝןןıɹ⅁",
   "item.barbequesdelight.grilled_cod_skewer": "ɹǝʍǝʞS poƆ pǝןןıɹ⅁",
   "item.barbequesdelight.grilled_lamb_skewer": "ɹǝʍǝʞS qɯɐꞀ pǝןןıɹ⅁",
+  "item.barbequesdelight.grilled_mushroom_skewer": "ɹǝʍǝʞS ɯooɹɥsnW pǝןןıɹ⅁",
   "item.barbequesdelight.grilled_pork_sausage_skewer": "ɹǝʍǝʞS ǝbɐsnɐS ʞɹoԀ pǝןןıɹ⅁",
   "item.barbequesdelight.grilled_potato_skewer": "ɹǝʍǝʞS oʇɐʇoԀ pǝןןıɹ⅁",
   "item.barbequesdelight.grilled_rabbit_skewer": "ɹǝʍǝʞS ʇıqqɐᴚ pǝןןıɹ⅁",
@@ -33,9 +35,11 @@
   "item.barbequesdelight.kebab_sandwich": "ɥɔıʍpuɐS qɐqǝʞ",
   "item.barbequesdelight.kebab_wrap": "dɐɹM qɐqǝʞ",
   "item.barbequesdelight.pepper_powder": "ɹǝpʍoԀ ɹǝddǝԀ",
+  "item.barbequesdelight.raw_beef_skewer": "ɹǝʍǝʞS ɟǝǝᗺ ʍɐᴚ",
   "item.barbequesdelight.raw_chicken_skewer": "ɹǝʍǝʞS uǝʞɔıɥƆ ʍɐᴚ",
   "item.barbequesdelight.raw_cod_skewer": "ɹǝʍǝʞS poƆ ʍɐᴚ",
   "item.barbequesdelight.raw_lamb_skewer": "ɹǝʍǝʞS qɯɐꞀ ʍɐᴚ",
+  "item.barbequesdelight.raw_mushroom_skewer": "ɹǝʍǝʞS ɯooɹɥsnW ʍɐᴚ",
   "item.barbequesdelight.raw_pork_sausage_skewer": "ɹǝʍǝʞS ǝbɐsnɐS ʞɹoԀ ʍɐᴚ",
   "item.barbequesdelight.raw_potato_skewer": "ɹǝʍǝʞS oʇɐʇoԀ ʍɐᴚ",
   "item.barbequesdelight.raw_rabbit_skewer": "ɹǝʍǝʞS ʇıqqɐᴚ ʍɐᴚ",
