@@ -23,9 +23,11 @@
   "item.barbequesdelight.burnt_skewer": "Burnt Skewer",
   "item.barbequesdelight.chili_powder": "Chili Powder",
   "item.barbequesdelight.cumin_powder": "Cumin Powder",
+  "item.barbequesdelight.grilled_beef_skewer": "Grilled Beef Skewer",
   "item.barbequesdelight.grilled_chicken_skewer": "Grilled Chicken Skewer",
   "item.barbequesdelight.grilled_cod_skewer": "Grilled Cod Skewer",
   "item.barbequesdelight.grilled_lamb_skewer": "Grilled Lamb Skewer",
+  "item.barbequesdelight.grilled_mushroom_skewer": "Grilled Mushroom Skewer",
   "item.barbequesdelight.grilled_pork_sausage_skewer": "Grilled Pork Sausage Skewer",
   "item.barbequesdelight.grilled_potato_skewer": "Grilled Potato Skewer",
   "item.barbequesdelight.grilled_rabbit_skewer": "Grilled Rabbit Skewer",
@@ -33,9 +35,11 @@
   "item.barbequesdelight.kebab_sandwich": "Kebab Sandwich",
   "item.barbequesdelight.kebab_wrap": "Kebab Wrap",
   "item.barbequesdelight.pepper_powder": "Pepper Powder",
+  "item.barbequesdelight.raw_beef_skewer": "Raw Beef Skewer",
   "item.barbequesdelight.raw_chicken_skewer": "Raw Chicken Skewer",
   "item.barbequesdelight.raw_cod_skewer": "Raw Cod Skewer",
   "item.barbequesdelight.raw_lamb_skewer": "Raw Lamb Skewer",
+  "item.barbequesdelight.raw_mushroom_skewer": "Raw Mushroom Skewer",
   "item.barbequesdelight.raw_pork_sausage_skewer": "Raw Pork Sausage Skewer",
   "item.barbequesdelight.raw_potato_skewer": "Raw Potato Skewer",
   "item.barbequesdelight.raw_rabbit_skewer": "Raw Rabbit Skewer",
