@@ -3,6 +3,8 @@
     "barbequesdelight:grilled_cod_skewer",
     "barbequesdelight:grilled_salmon_skewer",
     "barbequesdelight:grilled_chicken_skewer",
+    "barbequesdelight:grilled_mushroom_skewer",
+    "barbequesdelight:grilled_beef_skewer",
     "barbequesdelight:grilled_lamb_skewer",
     "barbequesdelight:grilled_rabbit_skewer",
     "barbequesdelight:grilled_pork_sausage_skewer",
