@@ -3,6 +3,8 @@
     "barbequesdelight:raw_cod_skewer",
     "barbequesdelight:raw_salmon_skewer",
     "barbequesdelight:raw_chicken_skewer",
+    "barbequesdelight:raw_mushroom_skewer",
+    "barbequesdelight:raw_beef_skewer",
     "barbequesdelight:raw_lamb_skewer",
     "barbequesdelight:raw_rabbit_skewer",
     "barbequesdelight:raw_pork_sausage_skewer",
