@@ -15,6 +15,8 @@ public enum BBQSkewers {
 	COD(7, 1f, true),
 	SALMON(7, 1f, true),
 	CHICKEN(7, 0.7f, true),
+	MUSHROOM(6, 0.4f, false),
+	BEEF(8, 0.7f, true, new EffectEntry(() -> MobEffects.DAMAGE_BOOST, 1800, 0, 0.5f)),
 	LAMB(12, 0.8f, true, new EffectEntry(() -> MobEffects.REGENERATION, 1800, 0, 0.5f)),
 	RABBIT(10, 0.8f, true, new EffectEntry(() -> MobEffects.JUMP, 1800, 0, 1)),
 	PORK_SAUSAGE(8, 0.7f, true, new EffectEntry(() -> MobEffects.DAMAGE_RESISTANCE, 1800, 0, 0.5f)),
