@@ -7,17 +7,21 @@
   "item.barbequesdelight.kebab_wrap": "烧烤卷饼",
   "item.barbequesdelight.kebab_sandwich": "烧烤三明治",
   "item.barbequesdelight.raw_cod_skewer": "生鳕鱼肉串",
-  "item.barbequesdelight.grilled_cod_skewer": "熟鳕鱼肉串",
+  "item.barbequesdelight.grilled_cod_skewer": "烤鳕鱼肉串",
   "item.barbequesdelight.raw_salmon_skewer": "生鲑鱼肉串",
-  "item.barbequesdelight.grilled_salmon_skewer": "熟鲑鱼肉串",
+  "item.barbequesdelight.grilled_salmon_skewer": "烤鲑鱼肉串",
   "item.barbequesdelight.raw_chicken_skewer": "生鸡肉串",
-  "item.barbequesdelight.grilled_chicken_skewer": "熟鸡肉串",
+  "item.barbequesdelight.grilled_chicken_skewer": "烤鸡肉串",
   "item.barbequesdelight.raw_lamb_skewer": "生羊肉串",
-  "item.barbequesdelight.grilled_lamb_skewer": "熟羊肉串",
+  "item.barbequesdelight.grilled_lamb_skewer": "烤羊肉串",
   "item.barbequesdelight.raw_rabbit_skewer": "生兔肉串",
-  "item.barbequesdelight.grilled_rabbit_skewer": "熟兔肉串",
+  "item.barbequesdelight.grilled_rabbit_skewer": "烤兔肉串",
   "item.barbequesdelight.raw_pork_sausage_skewer": "猪肉香肠串",
   "item.barbequesdelight.grilled_pork_sausage_skewer": "烤猪肉香肠",
+  "item.barbequesdelight.raw_beef_skewer": "生牛肉串",
+  "item.barbequesdelight.grilled_beef_skewer": "烤牛肉串",
+  "item.barbequesdelight.raw_mushroom_skewer": "生蘑菇串",
+  "item.barbequesdelight.grilled_mushroom_skewer": "烤蘑菇串",
   "item.barbequesdelight.raw_potato_skewer": "土豆串",
   "item.barbequesdelight.grilled_potato_skewer": "烤土豆串",
   "barbequesdelight.tooltip.chili": "它会使你总能吃更多烤串!",
